# rustisk

./: Cargo.toml  README.md
.github/workflows/: evaluate-issue.yml  release.yml
crates/asterisk-ami/src/: actions.rs  event_bus.rs
crates/asterisk-apps/src/: if_.rs
crates/asterisk-ari/src/: asterisk_resource.rs  http_listener.rs
crates/asterisk-cli/: Cargo.toml
crates/asterisk-cli/src/: main.rs
crates/asterisk-cli/tests/: startup_modes.rs
crates/asterisk-codecs/src/: agc.rs  noise_suppress.rs  opus.rs  resample.rs
crates/asterisk-core/src/: telemetry.rs
crates/asterisk-core/src/bridge/: mod.rs
crates/asterisk-core/src/pbx/: pbx_config.rs
crates/asterisk-funcs/src/: curl.rs  version.rs
crates/asterisk-integration-tests/src/: lib.rs
crates/asterisk-res/src/: agi.rs  http_server.rs
crates/asterisk-sip/: BUILDER_API.md
crates/asterisk-sip/src/: builder.rs  examples.rs  ice.rs  messaging.rs  outbound_registration.rs  session_ext.rs
crates/asterisk-sip/src/session/: mod.rs
crates/asterisk-sip/src/transaction/: mod.rs
crates/asterisk-utils/src/: check_expr.rs  check_expr2.rs  conf_bridge_binaural.rs
docs/: opentelemetry-tracing.md
tests/integration/: run_tests.py
