[package]
name = "rustisk-cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rustisk"
path = "src/main.rs"

[dependencies]
asterisk-types = { workspace = true }
asterisk-core = { workspace = true }
asterisk-codecs = { workspace = true }
asterisk-formats = { workspace = true }
asterisk-channels = { workspace = true }
asterisk-apps = { workspace = true }
asterisk-funcs = { workspace = true }
asterisk-sip = { workspace = true }
asterisk-cdr = { workspace = true }
asterisk-config = { workspace = true }
asterisk-ami = { workspace = true }
asterisk-ari = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
